--- a/CalcGen/CalcGen/Base.lproj/Main.storyboard
+++ b/CalcGen/CalcGen/Base.lproj/Main.storyboard
@@ -15,73 +15,111 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="NotebookBG" translatesAutoresizingMaskIntoConstraints="NO" id="wLE-vz-A7N">
-                                <rect key="frame" x="0.0" y="206" width="393" height="646"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="NotebookBG" translatesAutoresizingMaskIntoConstraints="NO" id="wLE-vz-A7N">
+                                <rect key="frame" x="0.0" y="205" width="393" height="647"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eyc-jU-fCL">
-                                <rect key="frame" x="16" y="345" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eyc-jU-fCL">
+                                <rect key="frame" x="16" y="345" width="48" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="xzo-ua-WCz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="CalcGen" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OgF-j6-zzf">
-                                <rect key="frame" x="16" y="74" width="101" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CalcGen" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OgF-j6-zzf">
+                                <rect key="frame" x="16" y="75" width="101" height="35"/>
                                 <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="32"/>
                                 <color key="textColor" red="0.93333333333333335" green="0.92549019607843142" blue="0.9137254901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="tka-eL-aug">
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="tka-eL-aug">
                                 <rect key="frame" x="16" y="142" width="361" height="32"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.78823529411764703" green="0.80000000000000004" blue="0.792156862745098" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <segments>
                                     <segment title="Frequencia Alélica"/>
                                     <segment title="Frequencia Genotípica"/>
                                 </segments>
                             </segmentedControl>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hUP-UX-7vD">
-                                <rect key="frame" x="327" y="68" width="50" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hUP-UX-7vD">
+                                <rect key="frame" x="327" y="70.666666666666671" width="50" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="kxJ-7o-u7g"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" image="questionmark.circle" catalog="system">
                                     <color key="baseForegroundColor" red="0.93333333333333335" green="0.92549019607843142" blue="0.9137254901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </buttonConfiguration>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bez-uv-ALd">
-                                <rect key="frame" x="16" y="235" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bez-uv-ALd">
+                                <rect key="frame" x="16" y="221" width="48" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="X1i-XI-JQD"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a5D-R6-kt0">
-                                <rect key="frame" x="16" y="273" width="361" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="a5D-R6-kt0">
+                                <rect key="frame" x="16" y="269" width="361" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="5Vq-zv-TK5"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Aul-fu-TEZ">
-                                <rect key="frame" x="16" y="374" width="361" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xo3-fW-CPs">
-                                <rect key="frame" x="134" y="500" width="124" height="44"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xo3-fW-CPs">
+                                <rect key="frame" x="132.66666666666666" y="485" width="127.99999999999997" height="44"/>
                                 <color key="backgroundColor" red="0.29411764709999999" green="0.58039215690000001" blue="0.37254901959999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="128" id="H8h-mP-syB"/>
+                                    <constraint firstAttribute="height" constant="44" id="uaN-er-xZQ"/>
+                                </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Calcular">
                                     <fontDescription key="titleFontDescription" style="UICTFontTextStyleTitle3"/>
                                     <color key="baseForegroundColor" red="0.93333333333333335" green="0.92549019607843142" blue="0.9137254901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </buttonConfiguration>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Aul-fu-TEZ">
+                                <rect key="frame" x="16" y="393" width="361" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="mCY-e4-9ql"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.29411764705882354" green="0.58039215686274503" blue="0.37254901960784315" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Eyc-jU-fCL" secondAttribute="trailing" symbolic="YES" id="5N1-13-jKD"/>
+                            <constraint firstItem="OgF-j6-zzf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="63y-gZ-euC"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="tka-eL-aug" secondAttribute="trailing" constant="16" id="7yH-q5-Rc2"/>
+                            <constraint firstItem="Aul-fu-TEZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="COL-OM-zXH"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hUP-UX-7vD" secondAttribute="trailing" constant="16" id="FWX-ue-Yf7"/>
+                            <constraint firstItem="Aul-fu-TEZ" firstAttribute="top" secondItem="Eyc-jU-fCL" secondAttribute="bottom" constant="16" id="IvW-tJ-H7L"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="bez-uv-ALd" secondAttribute="trailing" symbolic="YES" id="Ky2-vD-mGX"/>
+                            <constraint firstItem="OgF-j6-zzf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="MNw-69-Dv0"/>
+                            <constraint firstItem="Eyc-jU-fCL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="Mzf-lB-tlq"/>
+                            <constraint firstItem="hUP-UX-7vD" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="OgF-j6-zzf" secondAttribute="trailing" constant="8" symbolic="YES" id="TKY-5Q-Urh"/>
+                            <constraint firstItem="Eyc-jU-fCL" firstAttribute="top" secondItem="a5D-R6-kt0" secondAttribute="bottom" constant="32" id="UkR-oK-p0I"/>
+                            <constraint firstItem="xo3-fW-CPs" firstAttribute="top" secondItem="Aul-fu-TEZ" secondAttribute="bottom" constant="48" id="XCl-Kx-Sfj"/>
+                            <constraint firstItem="wLE-vz-A7N" firstAttribute="top" secondItem="tka-eL-aug" secondAttribute="bottom" constant="32" id="Xq7-we-2zW"/>
+                            <constraint firstItem="a5D-R6-kt0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="agu-gJ-toT"/>
+                            <constraint firstItem="tka-eL-aug" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="bGO-tA-TzL"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="a5D-R6-kt0" secondAttribute="trailing" constant="16" id="dT7-wl-ec6"/>
+                            <constraint firstItem="wLE-vz-A7N" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="exw-I7-MCk"/>
+                            <constraint firstAttribute="bottom" secondItem="wLE-vz-A7N" secondAttribute="bottom" id="i7n-wi-kcG"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Aul-fu-TEZ" secondAttribute="trailing" constant="16" id="kJH-c8-g3w"/>
+                            <constraint firstItem="bez-uv-ALd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="ktv-tj-aYE"/>
+                            <constraint firstItem="a5D-R6-kt0" firstAttribute="top" secondItem="bez-uv-ALd" secondAttribute="bottom" constant="16" id="nvh-7b-9Sl"/>
+                            <constraint firstItem="OgF-j6-zzf" firstAttribute="centerY" secondItem="hUP-UX-7vD" secondAttribute="centerY" id="ojh-m4-NWd"/>
+                            <constraint firstItem="bez-uv-ALd" firstAttribute="top" secondItem="tka-eL-aug" secondAttribute="bottom" constant="48" id="orG-SK-YIG"/>
+                            <constraint firstItem="wLE-vz-A7N" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="qW0-TK-PHP"/>
+                            <constraint firstItem="tka-eL-aug" firstAttribute="top" secondItem="OgF-j6-zzf" secondAttribute="bottom" constant="32" id="ts4-ba-w2J"/>
+                            <constraint firstItem="xo3-fW-CPs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tzm-AB-on2"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
