--- a/CalcGen/CalcGen/Base.lproj/Main.storyboard
+++ b/CalcGen/CalcGen/Base.lproj/Main.storyboard
@@ -40,6 +40,9 @@
                                     <segment title="Frequencia Alélica"/>
                                     <segment title="Frequencia Genotípica"/>
                                 </segments>
+                                <connections>
+                                    <action selector="segmentedControl:" destination="BYZ-38-t0r" eventType="valueChanged" id="N5v-Tm-ErN"/>
+                                </connections>
                             </segmentedControl>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hUP-UX-7vD">
                                 <rect key="frame" x="327" y="70.666666666666671" width="50" height="44"/>
@@ -50,6 +53,9 @@
                                 <buttonConfiguration key="configuration" style="plain" image="questionmark.circle" catalog="system">
                                     <color key="baseForegroundColor" red="0.93333333333333335" green="0.92549019607843142" blue="0.9137254901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="infoButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NU7-mi-mfd"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bez-uv-ALd">
                                 <rect key="frame" x="16" y="221" width="48" height="32"/>
@@ -80,6 +86,9 @@
                                     <fontDescription key="titleFontDescription" style="UICTFontTextStyleTitle3"/>
                                     <color key="baseForegroundColor" red="0.93333333333333335" green="0.92549019607843142" blue="0.9137254901960784" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="calculateButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="w8d-HS-dBB"/>
+                                </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Aul-fu-TEZ">
                                 <rect key="frame" x="16" y="393" width="361" height="44"/>
@@ -121,6 +130,12 @@
                             <constraint firstItem="xo3-fW-CPs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tzm-AB-on2"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="labelOne" destination="bez-uv-ALd" id="Fju-qa-E9L"/>
+                        <outlet property="labelTwo" destination="Eyc-jU-fCL" id="cpb-jd-Tk4"/>
+                        <outlet property="textFieldOne" destination="a5D-R6-kt0" id="zIc-mX-pOb"/>
+                        <outlet property="textFieldTwo" destination="Aul-fu-TEZ" id="y6q-e9-6hy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
